--- a/css/style.css
+++ b/css/style.css
@@ -48,21 +48,22 @@
     font-weight: 400;
 }
 .list > li a {
-    font-size: 15px;
+    font-size: 1.1em;
 }
-.list > li::before {
+.list > li > a::after {
+    margin-bottom: -8px;
     content: '';
-    position: absolute;
     background-image: url(../images/icon-arrow-light.svg);
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 14px;
-    height: 12px;
-    top: 60px;
-    margin-left: 71px;
+    margin-left: 0.5rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    display: inline-block;
 }
-.list > li.rotate::before {
+.list > li > a.rotate::after {
     transform: rotate(180deg);
+    margin-bottom: 0;
 }
 .Login {
     color:rgba(255, 255, 255, 0.62);
@@ -77,7 +78,7 @@
 }
 
 @media only screen and (max-width:768px) {
-    .landing-page::before {
+    .landing-page::after {
     background-image: url(../images/bg-pattern-intro-mobile.svg);
     right: -23rem;
     top: -20rem;
@@ -109,14 +110,10 @@
     
         
     }
-    .list > li::before{
+    .list > li a::after{
         background-image: url(../images/icon-arrow-dark.svg);
-        display: flex;
-        position: relative;
-        top: 1.6rem;
-        right: -10.5rem;
     }
-    .list > li.rotate::before {
+    .list > li a.rotate::before {
     transform: rotate(180deg);
     }
     .handel {
@@ -203,15 +200,16 @@
 .futuer > h2 {
     color: var(--Very-dark-black-blue);
 }
-.one h2 {
+.one h2,
+.two h2 {
     color: var(--Very-dark-blue);
 }
 .one p {
     color: var(--Very-dark-gray-blue);
 }
 .futuer .cardPh {
-    height: 40rem;
-    margin-right: -12rem;
+    height: 50rem;
+    margin-right: -15rem;
 }
 
 .background {
@@ -243,7 +241,7 @@
 }
 @media (min-width:1024px){
     .background {
-        height: 60vh;
+        height: 55vh;
     }
     .cicrcl img {
         top: -13rem;
@@ -254,12 +252,15 @@
     .list > li .dropdown-menu {
         position: absolute;
     }
+    .phone-disctop {
+        margin-bottom: -1.5rem;
+    }
     }
 
     .benfits .laptop {
-        height: 40rem;
+        height: 50rem;
         margin-right: -3rem;
-        margin-left: -15rem;
+        margin-left: -20rem;
     }
 
     footer {
@@ -288,3 +289,5 @@
     .list > li .dropdown-menu.spiner {
         display: block;
     } 
+
+   
